--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@mdi/js": "^5.1.45",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "lodash": "^4.17.15",
