--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vuetify": "^2.0.0",
     "vuex": "^3.0.1",
     "vuex-map-fields": "^1.3.6",
+    "vuex-persistedstate": "^3.0.1",
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
